syntax = "proto3";

package messages.analyzer;

option java_multiple_files = true;
option java_package = "ru.practicum.grpc.messages";

message RecommendedEventProto {
    int64 event_id = 1;         // идентификатор рекомендуемого мероприятия
    double score = 2;           // либо предсказанная оценка, либо коэффициент сходства, либо сумма весов действий с указанным мероприятием (в зависимости от метода, который вызывался в gRPC-сервисе)
}

